fixes for overflow

--- a/finalproject/styles/carpinteria-moa-larger.css
+++ b/finalproject/styles/carpinteria-moa-larger.css
@@ -86,6 +86,11 @@
         font-size: 1.5rem;
     }
 
+    .next-project-content {
+        display: flex;
+        flex-direction: row;
+    }
+
     footer {
         padding: 8px 24px;
         line-height: 5px;
